--- a/broken-leg-girl-framework/pom.xml
+++ b/broken-leg-girl-framework/pom.xml
@@ -38,7 +38,10 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
         <!-- spring data结束 -->
         <!-- 持久层支持开始 -->
         <!-- hibernate支持开始-->
