提交整合测试代码

--- a/app-datasource-demo/pom.xml
+++ b/app-datasource-demo/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-jpa-hibernate</artifactId>
+    <artifactId>app-datasource-demo</artifactId>
 
     <dependencies>
         <dependency>
