--- a/app-datasource-demo/pom.xml
+++ b/app-datasource-demo/pom.xml
@@ -13,6 +13,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.blg</groupId>
+            <artifactId>broken-leg-girl-framework</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
@@ -28,11 +37,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.blg</groupId>
-            <artifactId>broken-leg-girl-framework</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <!--  SpringCloud alibaba nacos    -->
         <!--        <dependency>-->
