--- a/broken-leg-girl-framework/pom.xml
+++ b/broken-leg-girl-framework/pom.xml
@@ -12,10 +12,26 @@
     <artifactId>broken-leg-girl-framework</artifactId>
 
     <dependencies>
+        <!-- 分页插件开始 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
             <version>5.1.11</version>
+        </dependency>
+        <!-- 分页插件结束 -->
+        <!-- starter开始 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <!--aop的依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -33,6 +49,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <!-- starter结束 -->
         <!-- spring data开始 -->
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -48,12 +65,19 @@
         </dependency>
         <!-- spring data结束 -->
         <!-- 持久层支持开始 -->
+        <!-- MySQL连接开始 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <!-- MySQL连接结束 -->
         <!-- hibernate支持开始-->
         <dependency>
             <groupId>com.jpaquery</groupId>
             <artifactId>jpaquery</artifactId>
         </dependency>
         <!-- hibernate支持结束-->
+        <!-- 持久层支持结束 -->
         <!-- 数据处理开始 -->
         <dependency>
             <groupId>com.alibaba</groupId>
