整合链路追踪Sleuth与Zipkin

--- a/YAML/public-config.yml
+++ b/YAML/public-config.yml
@@ -22,6 +22,12 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      # 采样率，模式0.1，也就是10%，为了便于观察效果，改为1.0，也就是100%。生产环境建议保持默认。
+      probability: 1.0
 management:   # 暴露检测节点
   endpoints:
     web:
