--- a/app-datasource-demo/pom.xml
+++ b/app-datasource-demo/pom.xml
@@ -22,5 +22,11 @@
             <artifactId>app-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--引入amqp-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 </project>
